pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/basic-gateway.gateway.cluster.golden.yaml
connectTimeout: 10s
edsClusterConfig:
  edsConfig:
    ads: {}
    initialFetchTimeout: 0s
    resourceApiVersion: V3
name: backend-c58ee0574727fc94
perConnectionBufferLimitBytes: 32768
type: EDS
typedExtensionProtocolOptions:
  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    commonHttpProtocolOptions:
      idleTimeout: 0s
    explicitHttpConfig:
      httpProtocolOptions: {}
