pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/basic-gateway.gateway.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 8080
enableReusePort: true
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "gateway" "*" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/to-log
      - name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "unknown" "gateway" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/from-log
      commonHttpProtocolOptions:
        headersWithUnderscoresAction: REJECT_REQUEST
        idleTimeout: 300s
      http2ProtocolOptions:
        allowConnect: true
        initialConnectionWindowSize: 1048576
        initialStreamWindowSize: 65536
        maxConcurrentStreams: 100
      httpFilters:
      - name: gzip-compress
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
          compressorLibrary:
            name: gzip
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
          responseDirectionConfig:
            disableOnEtagHeader: true
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
      mergeSlashes: true
      normalizePath: true
      pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
      rds:
        configSource:
          ads: {}
          resourceApiVersion: V3
        routeConfigName: gateway:HTTP:8080:*
      requestHeadersTimeout: 0.500s
      serverName: Kuma Gateway
      statPrefix: gateway
      streamIdleTimeout: 5s
      useRemoteAddress: true
listenerFilters:
- name: envoy.filters.listener.tls_inspector
  typedConfig:
    '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
name: gateway:HTTP:8080
perConnectionBufferLimitBytes: 32768
trafficDirection: INBOUND
