pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/basic_outbound_meshhttproute_resource_name.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 27777
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - filter:
          metadataFilter:
            matchIfKeyNotFound: true
            matcher:
              filter: kuma.routes
              path:
              - key: route_kri
              value:
                nullMatch: {}
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "unknown" "other-meshservice-http" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/meshservice/log
      - filter:
          metadataFilter:
            matchIfKeyNotFound: false
            matcher:
              filter: kuma.routes
              path:
              - key: route_kri
              value:
                stringMatch:
                  exact: kri_mhttpr_default___route-2_rule0
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "unknown" "other-meshservice-http" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/route-2/log
      httpFilters:
      - name: envoy.filters.http.lua
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          defaultSourceCode:
            inlineString: |
              function envoy_on_request(handle)
                local meta = handle:metadata():get("route_kri")
                if meta ~= nil then
                  handle:streamInfo():dynamicMetadata():set("kuma.routes", "route_kri", meta)
                end
              end
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
      normalizePath: true
      routeConfig:
        name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=backend&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
          routes:
          - match:
              path: /route-1
            name: kri_mhttpr_default___route-1_
            route:
              cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
              timeout: 0s
          - match:
              prefix: /route-1/
            name: kri_mhttpr_default___route-1_
            route:
              cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
              timeout: 0s
          - match:
              path: /route-2
            metadata:
              filterMetadata:
                envoy.filters.http.lua:
                  route_kri: kri_mhttpr_default___route-2_rule0
            name: kri_mhttpr_default___route-2_rule_0
            route:
              cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
              timeout: 0s
          - match:
              prefix: /route-2/
            metadata:
              filterMetadata:
                envoy.filters.http.lua:
                  route_kri: kri_mhttpr_default___route-2_rule0
            name: kri_mhttpr_default___route-2_rule_0
            route:
              cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
              timeout: 0s
      statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
metadata:
  filterMetadata:
    io.kuma.tags:
      kuma.io/unified-name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
trafficDirection: OUTBOUND
