pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/basic_outbound_real_meshservice.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 27777
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - filter:
          metadataFilter:
            matchIfKeyNotFound: true
            matcher:
              filter: kuma.routes
              path:
              - key: route_kri
              value:
                nullMatch: {}
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "backend" "other-meshservice-http" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/log
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
      normalizePath: true
      routeConfig:
        name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=backend&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
          routes:
          - match: {}
            route:
              cluster: default_other-meshservice-http_other-ns_zone-1_msvc_27777
              timeout: 0s
      statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
trafficDirection: OUTBOUND
