pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/inbound_matches_spiffeid_and_catchall.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 17777
enableReusePort: true
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - filter:
          extensionFilter:
            name: envoy.access_loggers.extension_filters.cel
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
              expression: connection.uri_san_peer_certificate == "spiffe://default/ns/clients/sa/specific-client"
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "unknown" "unknown" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/specific.log
      - name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] default "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "unknown" "unknown" "127.0.0.1" "%UPSTREAM_HOST%"
          path: /tmp/all.log
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: self_inbound_dp_17777
        requestHeadersToRemove:
        - x-kuma-tags
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: self_inbound_dp_17777
          routes:
          - match:
              prefix: /
            route:
              cluster: self_inbound_dp_17777
              timeout: 0s
      statPrefix: self_inbound_dp_17777
name: self_inbound_dp_17777
trafficDirection: INBOUND
