pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_file_workload_identity.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 27777
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - filter:
          metadataFilter:
            matchIfKeyNotFound: true
            matcher:
              filter: kuma.routes
              path:
              - key: route_kri
              value:
                nullMatch: {}
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                default zone-1 kri_wl_default_zone-1_kuma-demo_backend_
          path: /tmp/log
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
      normalizePath: true
      routeConfig:
        name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=backend&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
          routes:
          - match: {}
            route:
              cluster: default_other-meshservice-http_other-ns_zone-1_msvc_27777
              timeout: 0s
      statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_
trafficDirection: OUTBOUND
