pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_backend_plain_format_2.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37777
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes: {}
          body:
            stringValue: '[%START_TIME%] %RESPONSE_FLAGS% default 127.0.0.1(unknown)->%UPSTREAM_HOST%(other-meshservice-tcp)
              took %DURATION%ms, sent %BYTES_SENT% bytes, received: %BYTES_RECEIVED%
              bytes'
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_otel_otel-collector
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
      cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
      statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
metadata:
  filterMetadata:
    io.kuma.tags:
      kuma.io/unified-name: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
name: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
trafficDirection: OUTBOUND
