pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_unified_naming.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37777
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes: {}
          body:
            stringValue: '[%START_TIME%] %RESPONSE_FLAGS% default 127.0.0.1(backend)->%UPSTREAM_HOST%(other-meshservice-tcp)
              took %DURATION%ms, sent %BYTES_SENT% bytes, received: %BYTES_RECEIVED%
              bytes'
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_otel-collector-4317
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
      cluster: default_other-meshservice-tcp_other-ns_zone-1_msvc_37777
      statPrefix: default_other-meshservice-tcp_other-ns_zone-1_msvc_37777
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: outbound:127.0.0.1:37777
trafficDirection: OUTBOUND
