pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_unified_naming_1.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37778
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes: {}
          body:
            stringValue: default
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_otel-collector-4317
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
      cluster: default_foo-meshservice-tcp_other-ns_zone-1_msvc_37778
      statPrefix: default_foo-meshservice-tcp_other-ns_zone-1_msvc_37778
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: outbound:127.0.0.1:37778
trafficDirection: OUTBOUND
