pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_unified_naming_2.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37779
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes: {}
          body:
            kvlistValue:
              values:
              - key: mesh
                value:
                  stringValue: default
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_other-otel-collector-5317
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
      cluster: default_bar-meshservice-tcp_other-ns_zone-1_msvc_37779
      statPrefix: default_bar-meshservice-tcp_other-ns_zone-1_msvc_37779
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: outbound:127.0.0.1:37779
trafficDirection: OUTBOUND
