pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_workload_identity.cluster.golden.yaml
connectTimeout: 5s
loadAssignment:
  clusterName: system_meshaccesslog_otel_otel-collector
  endpoints:
  - lbEndpoints:
    - endpoint:
        address:
          pipe:
            path: /tmp/kuma-otel-otel-collector.sock
name: system_meshaccesslog_otel_otel-collector
type: STATIC
typedExtensionProtocolOptions:
  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    explicitHttpConfig:
      http2ProtocolOptions: {}
