pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_workload_identity.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 27777
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - filter:
          metadataFilter:
            matchIfKeyNotFound: true
            matcher:
              filter: kuma.routes
              path:
              - key: route_kri
              value:
                nullMatch: {}
        name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes:
            values:
            - key: mesh
              value:
                stringValue: default
            - key: zone
              value:
                stringValue: zone-1
            - key: workload
              value:
                stringValue: kri_wl_default_zone-1_kuma-demo_backend_
            - key: static.zone
              value:
                stringValue: static-zone-value
            - key: zone-1
              value:
                stringValue: legacy-zone-key
          body:
            stringValue: default zone-1 kri_wl_default_zone-1_kuma-demo_backend_
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_otel_otel-collector
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
            - key: kuma.zone
              value:
                stringValue: zone-1
            - key: kuma.workload
              value:
                stringValue: kri_wl_default_zone-1_kuma-demo_backend_
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
      normalizePath: true
      routeConfig:
        name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/display-name=backend&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
          routes:
          - match: {}
            route:
              cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
              timeout: 0s
      statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
metadata:
  filterMetadata:
    io.kuma.tags:
      kuma.io/unified-name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
name: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-http_27777
trafficDirection: OUTBOUND
