pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_route_without_match.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 27777
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
      normalizePath: true
      routeConfig:
        name: other-service-http
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/display-name=backend&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: other-service-http
          routes:
          - match: {}
            route:
              cluster: other-service-http
              timeout: 0s
      statPrefix: other-service-http
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: other-service-http
statPrefix: other-service-http
trafficDirection: OUTBOUND
