pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_tcp_backend_json_format.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37777
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            jsonFormat:
              address: logging.backend
              message:
                duration: '%DURATION%'
                protocol: '%PROTOCOL%'
          path: /tmp/kuma-al-backend-default.sock
      cluster: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
      statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
metadata:
  filterMetadata:
    io.kuma.tags: {}
name: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
statPrefix: kri_msvc_default_zone-1_other-ns_other-meshservice-tcp_37777
trafficDirection: OUTBOUND
