pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/zoneegress_matches_sni.listener.golden.yaml
address:
  socketAddress:
    address: 10.20.30.40
    portValue: 10002
enableReusePort: true
filterChains:
- filterChainMatch:
    serverNames:
    - sni.extsvc.default.zone-1.aws-aurora.8443
    transportProtocol: tls
  filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - filter:
          extensionFilter:
            name: envoy.access_loggers.extension_filters.cel
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
              expression: connection.requested_server_name == "sni.extsvc.default.zone-1.aws-aurora.8443"
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] %RESPONSE_FLAGS% default 127.0.0.1(unknown)->%UPSTREAM_HOST%(unknown) took %DURATION%ms, sent %BYTES_SENT% bytes, received: %BYTES_RECEIVED% bytes
          path: /tmp/aurora.log
      accessLogOptions:
        flushAccessLogOnConnected: true
      cluster: aws-aurora
      statPrefix: aws-aurora
listenerFilters:
- name: envoy.filters.listener.tls_inspector
  typedConfig:
    '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
name: self_zoneegress_dp_ze-port
trafficDirection: INBOUND
